# Containers

./: .dockerignore  Dockerfile  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
notebooks/: 5.2_assignment.ipynb
