[project]
name = "containers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pathlib>=1.0.1",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pip>=26.1.1",
]
